refactor sql queries